[package]
name = "meshcore"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
aes = "0.8"
arrayref = "0.3.9"
bitflags = "2.11.0"
bumpalo = { version = "3.20.2", default-features = false, features = ["collections"] }
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
const-hex = { version = "1.18.1", default-features = false, features = ["alloc"] }
ecb = { version = "0.1", features = ["alloc", "block-padding"], default-features = false }
ed25519-compact = { version = "2.2.0", features = ["x25519"], default-features = false }
heapless = "0.9.2"
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
hmac-sha256 = "1.1.14"
modular-bitfield = "0.13.1"
once_cell = { version = "1.21.4", default-features = false, features = ["alloc", "portable-atomic", "race"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_arrays = "0.2.0"
sha2 = { version = "0.10.8", default-features = false }
yoke = { version = "0.8.1", features = ["derive"] }
defmt = { version = "1", optional = true }

[features]
default = ["defmt"]
defmt = ["dep:defmt"]